# NumPy2048

./: .gitignore  2048-alt.txt  2048.txt  LICENSE  README.md  key_press.py  main.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/: main.py
src/NumPy2048/: __init__.py  __main__.py  main.py
src/NumPy2048/assets/: NumPy_2048.txt
src/strategies/: greedy_strategy.py
tests/: test_game_logic.py
tests/test_files/: test1.json  test10.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
