[metadata]
name = NumPy2048
description = NumPy implementation of the game 2048 originally created by Gabriele Cirulli
author = Wilhelm Söderkvist Vermelin
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
   NumPy2048
install_requires =
   numpy>=1.19
   windows-curses>=2.0;platform_system=="Windows"
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
NumPy2048 = py.typed

[options.packages.find]
where=src

[flake8]
max-line-length = 80